--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = kikichain
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.just.qqmy.kikichain
+PRODUCT_BUNDLE_IDENTIFIER = com.just.kiki.chain.kikichain
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.just.qqmy. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.just.kiki.chain. All rights reserved.
