--- a/kiki_web/pubspec.yaml
+++ b/kiki_web/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
   # Core dependencies
   cupertino_icons: ^1.0.6
@@ -103,6 +106,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
+  # Enable generation of localization files
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
